--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+requests==2.22.0
 flask==1.1.1
 CTRegisterMicroserviceFlask==0.5.0
 psycopg2== 2.8.4
 SQLAlchemy== 1.2.11
+earthengine-api==0.1.211
 jsonschema
+cerberus>=1.3
