added conexion with CT created gestore fetch if needed and convert in asnyc the call to GEE to retrieve the mapids

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 API_VERSION=v1
+project_id=
+BUCKET=
 CT_URL=mymachine:9000
 LOCAL_URL=mymachine:6868
 POSTGRES_PASSWD=postgres
@@ -9,3 +11,4 @@ POSTGRES_PASSWD=postgres
 PGADMIN_DEFAULT_EMAIL=test@vizzuality.com
 PGADMIN_DEFAULT_PASSWORD=PgAdmin2019
 EE_PRIVATE_KEY=
+
