add cloudsql-proxy sidecar container

--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -58,4 +58,20 @@ spec:
                   key: API_VERSION
         ports:
           - containerPort: 4506
+      - name: cloudsql-proxy
+        image: gcr.io/cloudsql-docker/gce-proxy:1.14
+        command: ["/cloud_sql_proxy",
+                  "-instances=skydipper-196010:europe-west1-b:skydipper-196010:europe-west1:skydipper-pg-1=tcp:5432",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        securityContext:
+          runAsUser: 2  # non-root user
+          allowPrivilegeEscalation: false
+        volumeMounts:
+          - name: cloudsql-instance-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+      volumes:
+        - name: cloudsql-instance-credentials
+          secret:
+            secretName: cloudsql-instance-credentials
       restartPolicy: Always
