--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -56,6 +56,11 @@ spec:
                 secretKeyRef:
                   name: mssecrets
                   key: API_VERSION
+          - name: POSTGRESQL_CONNECTION
+            valueFrom:
+                secretKeyRef:
+                  name: dbsecrets
+                  key: GEOPREDICTOR_POSTGRESQL_URI
         ports:
           - containerPort: 4506
       - name: cloudsql-proxy
