--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -66,7 +66,7 @@ spec:
       - name: cloudsql-proxy
         image: gcr.io/cloudsql-docker/gce-proxy:1.14
         command: ["/cloud_sql_proxy",
-                  "-instances=skydipper-196010:europe-west1-b:skydipper-196010:europe-west1:skydipper-pg-1=tcp:5432",
+                  "-instances=skydipper-196010:europe-west1:skydipper-pg-1=tcp:5432",
                   "-credential_file=/secrets/cloudsql/credentials.json"]
         securityContext:
           runAsUser: 2  # non-root user
