map secret to variable that the app is expecting

--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -56,7 +56,7 @@ spec:
                 secretKeyRef:
                   name: mssecrets
                   key: API_VERSION
-          - name: POSTGRESQL_CONNECTION
+          - name: POSTGRES_CONNECTION
             valueFrom:
                 secretKeyRef:
                   name: dbsecrets
