--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -56,6 +56,11 @@ spec:
                 secretKeyRef:
                   name: mssecrets
                   key: API_VERSION
+          - name: EE_PRIVATE_KEY
+            valueFrom:
+              secretKeyRef:
+                name: mssecrets
+                key: EE_PRIVATE_KEY
           - name: POSTGRES_CONNECTION
             valueFrom:
                 secretKeyRef:
