replace getting EE_PRIVATE_KEY to EE_GEE_TILE_PRIVATE_KEY

--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -60,7 +60,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: mssecrets
-                key: EE_PRIVATE_KEY
+                key: EE_GEE_TILE_PRIVATE_KEY
           - name: POSTGRES_CONNECTION
             valueFrom:
                 secretKeyRef:
