--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ flask==1.1.1
 CTRegisterMicroserviceFlask==0.5.0
 psycopg2== 2.8.4
 SQLAlchemy== 1.2.11
-earthengine-api==0.1.211
+earthengine-api==0.1.273
 cerberus>=1.3
+oauth2client==3.0.0
+google-api-python-client==1.12.8
