--- a/k8s/production/hpa.yaml
+++ b/k8s/production/hpa.yaml
@@ -2,12 +2,12 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   namespace: default
-  name: {name}
+  name: geopredictor
 spec:
   scaleTargetRef:
     apiVersion: apps/v1beta1
     kind: Deployment
-    name: {name}
-  minReplicas: 2
-  maxReplicas: 3
+    name: geopredictor
+  minReplicas: 1
+  maxReplicas: 2
   targetCPUUtilizationPercentage: 50
